3.dep-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test3
  labels:
    app: nginx-test3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test3
  template:
    metadata:
      labels:
        app: nginx-test3
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test3
spec:
  selector:
    app: nginx-test3
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
