5.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test3
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "prod"
spec:
  tls:
    - hosts:
      - test.danielstudio.store
      secretName: stage-test-prod-4
  rules:
  - host: test.danielstudio.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-test3
            port:
              number: 80
